cmake_minimum_required(VERSION 3.6)
project(libdng CXX)

file(GLOB DNGSDK_SRC "*.cpp" "*.h")

add_library(${PROJECT_NAME} STATIC ${DNGSDK_SRC})
target_include_directories(${PROJECT_NAME} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
target_link_libraries(${PROJECT_NAME} PUBLIC AdobeXMP)
target_compile_definitions(${PROJECT_NAME} PUBLIC "qDNGValidateTarget=0;qDNGValidate=0;qDNGPrintMessages=0;qDNGExperimental=0;qDNGXMPFiles=1;qDNGXMPDocOps=0;qDNGUseLibJPEG=0;qDNGAVXSupport=0")

if (WIN32)
	target_compile_definitions(${PROJECT_NAME} PUBLIC qWinOS)
endif()
if (APPLE AND NOT IOS)
	target_compile_definitions(${PROJECT_NAME} PUBLIC qMacOS)
endif()
if (IOS)
	target_compile_definitions(${PROJECT_NAME} PUBLIC "qiPhone;IOS_ENV")
endif()
if (ANDROID)
	target_compile_definitions(${PROJECT_NAME} PUBLIC qAndroid)
endif()
if (XLINUX)
	target_compile_definitions(${PROJECT_NAME} PUBLIC qLinux)
endif()
